unpackaged/main/default/objects/Cloud_File_History__c/Cloud_File_History__c.object-meta.xml
<CustomObject>
    <label>Cloud File History</label>
    <nameField>
        <label>Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud File History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>