unpackaged/main/default/objects/Cloud_File_History__c/fields/CheckInNotes__c.field-meta.xml
<CustomField>
    <fullName>CheckInNotes__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>