unpackaged/main/default/objects/Cloud_File_History__c/fields/Cloud_Files__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Files__c</fullName>
    <label>Cloud Files</label>
    <referenceTo>TVA_CFB__Cloud_Files__c</referenceTo>
    <relationshipLabel>Cloud File Histories</relationshipLabel>
    <relationshipName>Cloud_File_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>