unpackaged/main/default/objects/Cloud_File_History__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <label>File Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>